--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ h1 {
 li {
   list-style-type: none;
   text-align: center;
-}</style></head><body><h1>Harmonic Shaka Player Demo</h1><ul><li><a href="./_config.yml">_config.yml</a></li><li><a href="./index.md">index.md</a></li><li><a href="./v3.0.2+harmonic">v3.0.2+harmonic</a></li></ul></body></html>
+}</style></head><body><h1>Harmonic Shaka Player Demo</h1><ul><li><a href="./v3.0.2+harmonic">v3.0.2+harmonic</a></li></ul></body></html>
